src/snapshots/raoul__tests__parse_ast_has_error@redefined-function.ra.snap
---
source: src/tests.rs
expression: res.unwrap_err()
input_file: src/examples/invalid/static/redefined-function.ra
---
[
     --> 5:1
      |
    5 | func test(): int {␊
      | ...
    7 | }␊
      | ^
      |
      = Function "test" was already declared before,
]
