src/snapshots/raoul__tests__parse_ast_has_error@return-void-function.ra.snap
---
source: src/tests.rs
expression: res.unwrap_err()
input_file: src/examples/invalid/static/return-void-function.ra
---
[
     --> 2:10
      |
    2 |   return 1;␊
      |          ^
      |
      = Cannot cast from INT to VOID,
]
