src/snapshots/raoul__tests__parse_ast_has_error@undeclared-function.ra.snap
---
source: src/tests.rs
expression: res.unwrap_err()
input_file: src/examples/invalid/static/undeclared-function.ra
---
[
     --> 2:7
      |
    2 |   a = test();␊
      |       ^----^
      |
      = Function "test" was not declared or does not return a non-void value,
]
