src/snapshots/raoul__tests__parse_ast_has_error@undeclared-variable.ra.snap
---
source: src/tests.rs
expression: res.unwrap_err()
input_file: src/examples/invalid/static/undeclared-variable.ra
---
[
     --> 2:7
      |
    2 |   a = b;␊
      |       ^
      |
      = Variable "b" was not declared,
     --> 3:7
      |
    3 |   c = d;␊
      |       ^
      |
      = Variable "d" was not declared,
]
