src/snapshots/raoul__tests__parse_ast_has_error@wrong-arg-type.ra.snap
---
source: src/tests.rs
expression: res.unwrap_err()
input_file: src/examples/invalid/static/wrong-arg-type.ra
---
[
     --> 6:8
      |
    6 |   test(false);␊
      |        ^---^
      |
      = Cannot cast from Bool to String,
]
